// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductDetailPrice /> should not render extraPrice 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Component>
    <Connect(ProductDetailPrice)
      productId={null}
    >
      <ProductDetailPrice
        dispatch={[Function]}
        extraPriceInfo={null}
        productId={null}
      />
    </Connect(ProductDetailPrice)>
  </Component>
</Provider>
`;

exports[`<ProductDetailPrice /> should render extraPrice 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Component>
    <Connect(ProductDetailPrice)
      productId="foo"
    >
      <ProductDetailPrice
        dispatch={[Function]}
        extraPriceInfo="120 Tabletten"
        productId="foo"
      >
        <div
          className="css-rok1oc"
        >
          120 Tabletten
        </div>
      </ProductDetailPrice>
    </Connect(ProductDetailPrice)>
  </Component>
</Provider>
`;
